# Tradebot

./: # Development_plan.md  .dockerignore  .env.example  .github - Shortcut.lnk  .gitignore  API_BACKEND_TASK_TODO.md  API_BACKEND_TODO.md  ARCHITECTURE_OVERVIEW.md  BugTrack.txt  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Finbot_plan.txt  Finbot_plan_clean.txt  IMPLEMENTATION_TODO.md  LICENSE  MARKET_DATA_TODO.md  Makefile  README.md  RELEASE.md  SECURITY.md  TODO.md  TODO_TRADING_ENGINE.md  TODO_auth.md  TODO_secret_removal.md  TODO_security_setup.md  VISION_TODO.md  ai_agent.py  alembic.ini  backfill.py  check_db.py  check_password.py  create_user.py  curl_examples.sh  dashboard.py  docker-compose.yml  finbot.db  finbot_db_news.db  fix_TODO.md  fundamental_issues.md  (+40 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.ven/: pyvenv.cfg
.venv_old/: pyvenv.cfg
.vvenv/: pyvenv.cfg
ai/: __init__.py  schemas.py
ai_models/: __init__.py  llm.py  pipeline.py  safety.py
alembic/: env.py
analytics/: __init__.py  order_book.py  regime_detection.py
backend/: Dockerfile  README.md  __init__.py  docker-compose.yml  requirements.txt  services.py  setup.py
backtest/: run_backtest.py
backtester/: __init__.py  account.py  cli.py  config.py  costs.py  engine.py  fill_simulator.py  golden_test.py  instrument_master.py  ohlcv_storage.py  reporting.py  risk_manager.py  scope.py  simulator.py  strategy_interface.py  walk_forward.py
backtesting/: engine.py
brain/: __init__.py
common/: __init__.py  env.py  market_data.py
config/: paper_trading_config.json
core/: __init__.py
data/: storage.py
data_collector/: config.py  db.py  feature_builder.py  fundamentals_scraper.py  macro_scraper.py  models.py  news_scraper.py  scheduler.py  stock_scraper.py  utils.py
data_engine/: __init__.py  candle.py  indicators.py  live_engine.py  logger.py  rolling.py
database/: __init__.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MODULE_COMPLETION_CRITERIA.md  README.md  README_FINBOT.md  README_MARKET_DATA.md  StrategyBook.md  VISION.md  __init__.py  ai_pipeline.md  architecture_overview.md  backtest_pipeline.md  ci-cd-architecture.md  ci-cd-inventory.md  developer-guide.md  env_setup.md  frontend_dashboard_simplified.md  legal_safety_notes.md  modules.md  mvp_guide.md  paper_execution.md  project-report.md  project_completion_todo.md  risk_enforcement.md  trading_loop.md  user-onboarding.md
e2e/: playwright.config.ts
examples/: sample_minute.csv
execution/: __init__.py  base_broker.py  engine.py  kite_adapter.py  mocked_broker.py
finbot-backend/: __init__.py  setup.py
finbot-frontend/: __init__.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend_legacy/: FE-Readme.md  index.html  package.json
frontend_legacy_archive/: package-lock.json  vite.config.ts
indicators/: patterns.py  realtime.py  technicals.py
infrastructure/: Dockerfile  docker-compose.yml  models.py  timescale-init.sql
ingestion/: __init__.py  base.py
load/: health_smoke.js
market_data/: __init__.py
market_data_ingestion/: .env.example  realtime_engine.py
marketing/: product_demo_storyboard.md
notes/: architecture-notes.md
src/: cli.py
(+700 files in other folders)
